--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -66,6 +66,9 @@ jobs:
           
       - name: install quarto dependency
         run: quarto add quarto-ext/shinylive --no-prompt && quarto add r-wasm/quarto-live --no-prompt
+      
+      - name: path r packages
+        run: R_LIBS_USER=/home/runner/work/blog/blog/renv/profiles/armyknives/renv/library/linux-ubuntu-jammy/R-4.4/x86_64-pc-linux-gnu
 
         #- name: Install quarto extension
         #run: quarto install --no-prompt extension schochastics/academicons
