--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -54,10 +54,14 @@ jobs:
       - name: "Setup pandoc"
         uses: r-lib/actions/setup-pandoc@v2
 
-      - run: which pandoc
+      - run: |
+          which pandoc
+          pandoc --version
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
+
+      - run: sudo cp -f /opt/hostedtoolcache/pandoc/3.1.11/x64/pandoc /opt/quarto/bin/tools/
 
       - name: check Quarto
         run: |
