post(new): shinylive & quartolive

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -53,7 +53,8 @@ jobs:
 
       - name: "Setup pandoc"
         uses: r-lib/actions/setup-pandoc@v2
-        with: pandoc-version: latest
+        with: 
+          pandoc-version: latest
 
       - run: |
           which pandoc
