post(new): shinylive & quartolive

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -52,8 +52,8 @@ format:
 execute:
   freeze: auto
 
-filters:
-  - ./misc/quarto-version.lua
+#filters:
+#  - ./misc/quarto-version.lua
 
 #editor: visual
 
