--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,10 +9,10 @@ jobs:
   build-deploy:
     runs-on: ubuntu-latest
     permissions:
-      actions: write
-      pages: write
-      contents: write
-      id-token: write
+      actions: [read, write]
+      pages: [read, write]
+      contents: [read, write]
+      id-token: [read, write]
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
