--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -78,6 +78,7 @@ jobs:
           Rscript -e 'library(shinylive)'
           quarto check
           (which quarto && quarto --version && quarto pandoc --version) || echo "no quarto detected"
+          export PATH="/opt/R/4.4.1/bin/:$PATH"
 
         #- name: Install quarto extension
         #run: quarto install --no-prompt extension schochastics/academicons
