post(new): shinylive & quartolive

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -82,8 +82,8 @@ jobs:
 #          export PATH="/usr/local/bin/:$PATH"
 #          echo $PATH
 
-      - name: install quarto dep
-        run: sudo quarto add quarto-ext/shinylive --no-prompt
+      #- name: install quarto dep
+      #  run: sudo quarto add quarto-ext/shinylive --no-prompt
         #- name: Install quarto extension
         #run: quarto install --no-prompt extension schochastics/academicons
         
