--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,10 +9,8 @@ jobs:
   build-deploy:
     runs-on: ubuntu-latest
     permissions:
-      actions: write
-      pages: write
+      #actions: write
       contents: write
-      id-token: write
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
