--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -51,10 +51,10 @@ jobs:
           #working-directory: "quarto/data/1_swiss_army_knives/"
           cache-version: 3
 
-      - name: "Setup pandoc"
-        uses: r-lib/actions/setup-pandoc@v2
-        with: 
-          pandoc-version: latest
+      #- name: "Setup pandoc"
+      #  uses: r-lib/actions/setup-pandoc@v2
+      #  with: 
+      #    pandoc-version: latest
 
       - run: |
           which pandoc
@@ -65,7 +65,7 @@ jobs:
         #with:
         #  version: pre-release
 
-      - run: sudo cp -f /opt/hostedtoolcache/pandoc/3.5/x64/pandoc /opt/quarto/bin/tools/
+      #- run: sudo cp -f /opt/hostedtoolcache/pandoc/3.5/x64/pandoc /opt/quarto/bin/tools/
         
       - name: Quarto render - to inspect rendering cache
         run: sudo quarto render ./posts/ --use-freezer
