post(new): shinylive & quartolive

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -77,7 +77,7 @@ jobs:
           git add _freeze
           ( git commit -m "[BOT]Quarto Freeze by GH actions" && git push ) || echo "Nothing to Push.. Skipping the Push Process"
         
-      - run: sudo chmod -R u+w /home/runner/work/blog/blog/
+      - run: sudo chmod -R 755 /home/runner/work/blog/blog
       
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
