--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -74,6 +74,7 @@ jobs:
         run: |
           git config --global user.name 'YONGHUNI'
           git config --global user.email 'dydgns0556@gmail.com'
+          git pull
           git add -f _freeze .quarto
           ( git commit -m "[BOT]Quarto Freeze by GH actions" && git push ) || echo "Nothing to Push.. Skipping the Push Process"
         
