--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -76,7 +76,7 @@ jobs:
           key: ${{ runner.os }}-shinylive-${{ hashFiles('**/shinystandalone/index.qmd') }}
 
       - name: Quarto render - to inspect rendering cache
-        run: sudo quarto render ./posts/ --use-freezer
+        run: quarto render ./posts/ --use-freezer
       
       - name: Push Quarto render cache if diff detected
         run: |
