--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,6 +41,7 @@ jobs:
       - name: Install R
         uses: r-lib/actions/setup-r@v2
         with:
+          r-version: '4.4.1'
           Ncpus: '4'
 
       - name: Install R dependency
