--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,7 +21,7 @@ jobs:
         with: 
           packages: >- 
             libcurl4-openssl-dev libharfbuzz-dev libfribidi-dev
-            libudunits2-dev libgdal-dev
+            libudunits2-dev libgdal-dev libmagick++-dev
           #execute_install_scripts: true
           version: 1
       
