--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -43,6 +43,7 @@ jobs:
         uses: r-lib/actions/setup-r@v2
         with:
           Ncpus: '4'
+          r-version: '4.4.1'
 
       - name: Install R dependency
         uses: r-lib/actions/setup-renv@v2
