--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -58,20 +58,27 @@ jobs:
 
         #- name: Install quarto extension
         #run: quarto install --no-prompt extension schochastics/academicons
-      - name: Quarto render - to inspect rendering cache
-        run: quarto render ./ --execute-debug
+      # - name: Quarto render - to inspect rendering cache
+      #   run: quarto render ./ --execute-debug
+      # 
+      # - name: Push Quarto render cache if diff detected
+      #   run: |
+      #     git config --global user.name 'YONGHUNI'
+      #     git config --global user.email 'dydgns0556@gmail.com'
+      #     git add -f _freeze
+      #     ( git commit -m "[BOT]Quarto Freeze by GH actions" && git push ) || echo "Nothing to Push.. Skipping the Push Process"
       
+      - name: Render and Publish
+        uses: quarto-dev/quarto-actions/publish@v2
+        with:
+          target: gh-pages
+          #render: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Push Quarto render cache if diff detected
         run: |
           git config --global user.name 'YONGHUNI'
           git config --global user.email 'dydgns0556@gmail.com'
           git add -f _freeze
           ( git commit -m "[BOT]Quarto Freeze by GH actions" && git push ) || echo "Nothing to Push.. Skipping the Push Process"
-      
-      - name: Render and Publish
-        uses: quarto-dev/quarto-actions/publish@v2
-        with:
-          target: gh-pages
-          render: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
