Update environment.yml for dbscan post

--- a/pyenv/base/environment.yml
+++ b/pyenv/base/environment.yml
@@ -135,4 +135,5 @@ dependencies:
   - xz=5.4.6
   - zlib=1.2.13
   - zstd=1.5.5
+  - dbscan=0.0.12   
 #prefix: C:\Users\dydgn\anaconda3\envs\baseline
