--- a/pyenv/base/environment.yml
+++ b/pyenv/base/environment.yml
@@ -102,7 +102,7 @@ dependencies:
   - m2w64-gcc-libs=5.3.0
   - m2w64-gcc-libs-core=5.3.0
   - m2w64-gmp=6.1.0
-  - m2w64-libwinpthread-git=5.0.0.4634.697f757
+  #- m2w64-libwinpthread-git=5.0.0.4634.697f757
   - mapclassify=2.10.0
   - markupsafe=3.0.2
   - matplotlib=3.9.2
@@ -130,7 +130,7 @@ dependencies:
   - poppler=22.12.0
   - poppler-data=0.4.12
   - proj=9.3.1
-  - pthreads-win32=2.9.1
+  #- pthreads-win32=2.9.1
   - pybind11-abi=11
   - pycparser=2.22
   - pyparsing=3.2.3
@@ -170,7 +170,7 @@ dependencies:
   - vcomp14=14.44.35208
   - vs2015_runtime=14.44.35208
   - wheel=0.45.1
-  - win_inet_pton=1.1.0
+  #- win_inet_pton=1.1.0
   - xerces-c=3.2.5
   - xyzservices=2025.4.0
   - xz=5.8.1
@@ -178,3 +178,148 @@ dependencies:
   - zlib=1.2.13
   - zstandard=0.23.0
   - zstd=1.5.6
+(baseline)  mamba env export --from-history --no-builds | grep -v "^prefix: " | grep python
+  - brotli-python=1.0.9
+  - python=3.12.3
+  - python-dateutil=2.9.0post0
+  - python-tzdata=2023.3
+(baseline)  mamba env export --from-history --no-builds | grep -v "^prefix: "
+name: baseline
+channels:
+  - conda-forge
+  - pkgs/main
+dependencies:
+  - attrs=23.1.0
+  - blas=1.0
+  - blosc=1.21.3
+  - boost-cpp=1.82.0
+  - bottleneck=1.3.7
+  - branca=0.6.0
+  - brotli=1.0.9
+  - brotli-bin=1.0.9
+  - brotli-python=1.0.9
+  - bzip2=1.0.8
+  - ca-certificates=2024.9.24
+  - cairo=1.16.0
+  - certifi=2024.8.30
+  - cfitsio=3.470
+  - charset-normalizer=3.3.2
+  - click=8.1.7
+  - click-plugins=1.1.1
+  - cligj=0.7.2
+  - colorama=0.4.6
+  - contourpy=1.2.0
+  - cycler=0.11.0
+  - dbscan
+  - expat=2.6.3
+  - fiona=1.9.5
+  - folium=0.14.0
+  - fontconfig=2.14.1
+  - fonttools=4.51.0
+  - freetype=2.12.1
+  - freexl=2.0.0
+  - gdal=3.6.2
+  - geopandas=0.14.2
+  - geopandas-base=0.14.2
+  - geos=3.8.0
+  - geotiff=1.7.0
+  - glib=2.78.4
+  - glib-tools=2.78.4
+  - hdf4=4.2.13
+  - hdf5=1.12.1
+  - icu=73.1
+  - idna=3.7
+  - intel-openmp=2023.1.0
+  - jinja2=3.1.4
+  - joblib=1.4.2
+  - jpeg=9e
+  - kealib=1.5.0
+  - kiwisolver=1.4.4
+  - krb5=1.20.1
+  - lcms2=2.12
+  - lerc=3.0
+  - libboost=1.82.0
+  - libbrotlicommon=1.0.9
+  - libbrotlidec=1.0.9
+  - libbrotlienc=1.0.9
+  - libclang=14.0.6
+  - libclang13=14.0.6
+  - libcurl=8.9.1
+  - libdeflate=1.17
+  - libffi=3.4.4
+  - libgdal=3.6.2
+  - libglib=2.78.4
+  - libiconv=1.16
+  - libkml=1.3.0
+  - libnetcdf=4.8.1
+  - libpng=1.6.39
+  - libpq=12.17
+  - libspatialindex=1.9.3
+  - libspatialite=5.1.0
+  - libssh2=1.11.0
+  - libtiff=4.5.1
+  - libwebp-base=1.3.2
+  - libxml2=2.13.1
+  - libzip=1.8.0
+  - lz4-c=1.9.4
+  - mapclassify=2.5.0
+  - markupsafe=2.1.3
+  - matplotlib=3.9.2
+  - matplotlib-base=3.9.2
+  - minizip=4.0.3
+  - mkl=2023.1.0
+  - mkl-service=2.4.0
+  - mkl_fft=1.3.10
+  - mkl_random=1.2.7
+  - networkx=3.3
+  - numexpr=2.8.7
+  - numpy=1.26.4
+  - numpy-base=1.26.4
+  - openjpeg=2.5.2
+  - openssl=3.0.15
+  - packaging=24.1
+  - pandas=2.2.2
+  - pcre2=10.42
+  - pillow=10.4.0
+  - pip=24.2
+  - pixman=0.40.0
+  - ply=3.11
+  - poppler=22.12.0
+  - poppler-data=0.4.11
+  - proj=9.3.1
+  - pybind11-abi=5
+  - pyparsing=3.1.2
+  - pyproj=3.6.1
+  - pyqt=5.15.10
+  - pyqt5-sip=12.13.0
+  - pysocks=1.7.1
+  - python=3.12.3
+  - python-dateutil=2.9.0post0
+  - python-tzdata=2023.3
+  - pytz=2024.1
+  - qhull=2020.2
+  - qt-main=5.15.2
+  - requests=2.32.3
+  - rtree=1.0.1
+  - scikit-learn=1.5.1
+  - scipy=1.13.1
+  - setuptools=75.1.0
+  - shapely=2.0.5
+  - sip=6.7.12
+  - six=1.16.0
+  - sqlite=3.45.3
+  - tbb=2021.8.0
+  - threadpoolctl=3.5.0
+  - tiledb=2.3.3
+  - tk=8.6.14
+  - tornado=6.4.1
+  - tzdata=2024b
+  - unicodedata2=15.1.0
+  - uriparser=0.9.7
+  - urllib3=2.2.3
+  - wheel=0.44.0
+  - xerces-c=3.2.4
+  - xyzservices=2022.9.0
+  - xz=5.4.6
+  - zlib=1.2.13
+  - zstd=1.5.5
