--- a/pyenv/base/environment.yml
+++ b/pyenv/base/environment.yml
@@ -1,7 +1,6 @@
 name: baseline
 channels:
-  - conda-forge
-  - pkgs/main
+  - defaults
 dependencies:
   - attrs=23.1.0
   - blas=1.0
@@ -24,7 +23,6 @@ dependencies:
   - colorama=0.4.6
   - contourpy=1.2.0
   - cycler=0.11.0
-  - dbscan
   - expat=2.6.3
   - fiona=1.9.5
   - folium=0.14.0
@@ -90,7 +88,7 @@ dependencies:
   - numpy=1.26.4
   - numpy-base=1.26.4
   - openjpeg=2.5.2
-#  - openssl=3.0.15
+  - openssl=3.0.15
   - packaging=24.1
   - pandas=2.2.2
   - pcre2=10.42
@@ -107,7 +105,7 @@ dependencies:
   - pyqt=5.15.10
   - pyqt5-sip=12.13.0
   - pysocks=1.7.1
-  - python=3.12.3
+  - python=3.12.7
   - python-dateutil=2.9.0post0
   - python-tzdata=2023.3
   - pytz=2024.1
@@ -137,3 +135,4 @@ dependencies:
   - xz=5.4.6
   - zlib=1.2.13
   - zstd=1.5.5
+#prefix: C:\Users\dydgn\anaconda3\envs\baseline
